[gd_scene load_steps=6 format=3 uid="uid://nvg7mfo4u3xm"]

[ext_resource type="PackedScene" uid="uid://c2ewpuyf5wxg1" path="res://Scenes/player_sprite.tscn" id="1_27slj"]
[ext_resource type="Script" path="res://Scripts/player.gd" id="1_uyjoc"]
[ext_resource type="Script" path="res://Scripts/pointer.gd" id="3_gdmas"]
[ext_resource type="PackedScene" uid="uid://o5bjerhd2gur" path="res://Scenes/hotbar.tscn" id="4_3tk55"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_g5nvm"]
size = Vector2(7.25, 28.75)

[node name="Player" type="CharacterBody2D"]
script = ExtResource("1_uyjoc")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -4.76837e-07)
shape = SubResource("RectangleShape2D_g5nvm")

[node name="PlayerSprite" parent="." instance=ExtResource("1_27slj")]
scale = Vector2(0.9, 0.9)

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(1.3, 1.3)
limit_smoothed = true
position_smoothing_speed = 15.0

[node name="RayCastLeft" type="RayCast2D" parent="."]
position = Vector2(-2.7, 14.4)
target_position = Vector2(0, 1)
collision_mask = 3
hit_from_inside = true

[node name="RayCastRight" type="RayCast2D" parent="."]
position = Vector2(2.7, 14.4)
target_position = Vector2(0, 1)
collision_mask = 3
hit_from_inside = true

[node name="RayCast2D" type="RayCast2D" parent="."]
position = Vector2(0, -11)
target_position = Vector2(60, 0)
collision_mask = 3
hit_from_inside = true
script = ExtResource("3_gdmas")

[node name="Hotbar" parent="." instance=ExtResource("4_3tk55")]
position = Vector2(-95.25, 75)
scale = Vector2(1.4, 1.4)
